# Secure-Password-Generator

./: .gitignore  Cargo.toml  GenPass.py  GenPassv1.0.py  README.md  build.rs  help_message.py  image_data.py
src/: main.rs
ui/: appwindow.slint
