[package]
name = "securepassword"
version = "1.4.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.9.1"
rand = "0.8.5"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
arboard = "3.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation"] }

[build-dependencies]
slint-build = "1.9.1"
winres = "0.1"
